# GitHub-API

./: .gitignore  CMakeLists.txt  README.md
include/: GitHub.h  GitHubApiError.h  ParseJsonError.h
include/User/: Myself.h  User.h
source/: GitHub.cpp  main.cpp
source/User/: Myself.cpp  User.cpp
